<resources>
    <string name="app_name">BodyBoost</string>
    <string name="UserName">Username/email</string>
    <string name="paswword">Password</string>
    <string name="login">Login</string>
    <string name="registerTxt">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="registerCaps">REGISTER</string>
    <string name="registration">REGISTRATION</string>
    <string name="registerCancel">CANCEL</string>
    <string name="appName">BodyBoost</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="radioBtnTXT">Select an option (you can change later on).</string>
    <string name="radioBtn1">Gain mass</string>
    <string name="radioBtn2">Lose weight</string>
    <string name="back_button">Go back</string>
    <string name="settings_button">settings button</string>
    <string name="nav_text">Giving your best every day.</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="confirmEdit">Apply</string>
    <string name="edit">edit</string>
    <string name="titleSetGoal">What is your \n\t\t\t\t\tgoal?</string>
    <string name="currentWeight">Current Weight (kg)</string>
    <string name="currentHeight">Current Height (cm)</string>
    <string name="setFocus">Focus set on</string>
    <string name="mainFood">Foods</string>
    <string name="mainTraining">Exercises</string>
    <string name="mainProgress">Progress</string>
    <string name="setGoal">Set Goal</string>
    <string name="profile">Profile</string>
    <string name="foodTitle">Food Title</string>
    <string name="description">Description</string>
    <string name="calories">Calories:</string>
    <string name="calorie">Calories</string>
    <string name="Protein">Protein</string>
    <string name="carbo">Carbohydrates</string>
    <string name="fat">Fat</string>
    <string name="consume">Consume</string>
    <string name="calUnit">(kcal)</string>
    <string name="gramUnit">(g)</string>
    <string name="premiumTxt"></string>

    <string-array name="goal_options">
        <item>Lose weight</item>
        <item>Gain mass</item>
    </string-array>
    />
</resources>