<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/exemplo1"
    tools:context=".Register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/registerFNEdit"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/firstName"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/registerTitle"
            app:layout_constraintStart_toStartOf="@+id/registerTitle"
            app:layout_constraintTop_toBottomOf="@+id/registerTitle" />

        <EditText
            android:id="@+id/registerEmailEdit"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/registerLNEdit"
            app:layout_constraintStart_toStartOf="@+id/registerLNEdit"
            app:layout_constraintTop_toBottomOf="@+id/registerLNEdit" />

        <Button
            android:id="@+id/registerBtnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="@color/redCancel"
            android:onClick="goToLogin"
            android:text="@string/registerCancel"
            app:layout_constraintEnd_toEndOf="@+id/registerBtnRegister"
            app:layout_constraintStart_toStartOf="@+id/registerBtnRegister"
            app:layout_constraintTop_toBottomOf="@+id/registerBtnRegister" />

        <Button
            android:id="@+id/registerBtnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="71dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="71dp"
            android:backgroundTint="@color/blue"
            android:text="@string/registerCaps"
            android:textColorHighlight="#C11C1C"
            android:textColorLink="#973636"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <EditText
            android:id="@+id/registerPassEdit"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/registerEmailEdit"
            app:layout_constraintStart_toStartOf="@+id/registerEmailEdit"
            app:layout_constraintTop_toBottomOf="@+id/registerEmailEdit" />

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/registerConfirmPassEdit"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/registerPassEdit"
            app:layout_constraintStart_toStartOf="@+id/registerPassEdit"
            app:layout_constraintTop_toBottomOf="@+id/registerPassEdit" />

        <EditText
            android:id="@+id/registerLNEdit"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/registerFNEdit"
            app:layout_constraintStart_toStartOf="@+id/registerFNEdit"
            app:layout_constraintTop_toBottomOf="@+id/registerFNEdit" />

        <TextView
            android:id="@+id/emailError"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:background="#83FFFFFF"
            android:text=""
            android:textColor="@color/redCancel"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/registerEmailEdit"
            app:layout_constraintEnd_toEndOf="@+id/registerEmailEdit"
            app:layout_constraintStart_toStartOf="@+id/registerEmailEdit" />

        <TextView
            android:id="@+id/confirmPassError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="#83FFFFFF"
            android:text=""
            android:textColor="@color/redCancel"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/registerPassEdit"
            app:layout_constraintEnd_toEndOf="@+id/registerPassEdit"
            app:layout_constraintStart_toStartOf="@+id/registerPassEdit" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="82dp"
            app:layout_constraintEnd_toEndOf="@+id/radioTxt"
            app:layout_constraintStart_toStartOf="@+id/radioTxt"
            app:layout_constraintTop_toBottomOf="@+id/radioTxt">

            <RadioButton

                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioBtn1"
                android:textSize="14sp"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioBtn2"
                android:textSize="14sp"
                android:textColor="@color/white" />
        </RadioGroup>

        <TextView
            android:id="@+id/radioTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/radioBtnTXT"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/registerConfirmPassEdit"
            app:layout_constraintStart_toStartOf="@+id/registerConfirmPassEdit"
            app:layout_constraintTop_toBottomOf="@+id/registerConfirmPassEdit" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>