<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/g_wallpaper"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="end">

        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/nav_view"
            app:headerLayout="@layout/header"
            app:menu="@menu/main_menu"
            android:layout_gravity="end"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/toolbar_settingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="5dp"
                android:background="@drawable/imageview_selector"
                android:contentDescription="@string/settings_button"
                android:src="@drawable/baseline_menu_34" />

        </androidx.appcompat.widget.Toolbar>

        <Button
            android:id="@+id/btnFood"
            android:layout_width="118dp"
            android:layout_height="52dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/teal_200"
            android:onClick="showFoods"
            android:text="@string/mainFood"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/btnProgress"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toEndOf="@+id/btnTraining"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnProgress"
            android:layout_width="115dp"
            android:layout_height="52dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="14dp"
            android:backgroundTint="@color/teal_200"
            android:onClick="showProgress"
            android:text="@string/mainProgress"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnTraining"
            android:layout_width="119dp"
            android:layout_height="52dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="92dp"
            android:backgroundTint="@color/teal_200"
            android:onClick="showExercises"
            android:text="@string/mainTraining"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:background="#90CCD6D0"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTraining" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="27dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_btns" />

        <TextView
            android:id="@+id/premiumTxt"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="#8B30474E"
            android:padding="6dp"
            android:text="@string/premiumTxt"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_btns" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/baseline_workspace_premium_24"
            app:layout_constraintBottom_toTopOf="@+id/btnTraining"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/baseline_workspace_premium_24"
            app:layout_constraintBottom_toTopOf="@+id/btnTraining"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.drawerlayout.widget.DrawerLayout>